--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
         "/Users/andyderis33/Downloads/javafx-sdk-21.0.3/lib/javafx.base.jar",
         "/Users/andyderis33/Downloads/javafx-sdk-21.0.3/lib/javafx.controls.jar",
         "/Users/andyderis33/Downloads/javafx-sdk-21.0.3/lib/javafx.graphics.jar"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
